melee weapon balancing & bugfix
balanced melee weapons; bugfixes & tweaks regarding the weapon system

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
@@ -60,13 +60,16 @@ intro:
             - §r镐的左键模式会启用自动挥舞，而右键不会
             - §r自动挥舞：允许自动挥舞的物品在使用时自动开启。自动挥舞启用时，CD结束后将自动再次使用物品
             - §r可再次使用武器/工具以关闭自动挥舞
+            - §r注：物品使用速度为非整数时，会根据小数部分随机取整
+            - §r注：对于使用时间固定的物品，物品使用速度会被按比例无损转换为伤害
+            - §r另外，在聊天栏中输入[i]可以展示手上物品
         NPC:
             row: 2
             col: 4
             name: §r[信息] NPC
             lore:
             - §r主城处的NPC可以右键（Minecraft设置中指定的交互键）交互
-            - §r大部分NPC在条件允许后会开启商店功能；部分交易物品存在BOSS进度需求
+            - §r大部分NPC在条件允许后会开启商店功能；许多交易物品存在BOSS进度需求
             - §r点击商店中的物品以购买，点击物品栏中的物品以出售
             - §rSHIFT+点击可以一次性出售/购买一整组物品
         crafting:
