--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
@@ -95,6 +95,14 @@ intro:
             - §b- 辅助瞄准功能
             - §b- 各种键位绑定（现有按键均可自由设置）
             - §r输入指令[/settings]查看更多信息
+        credit:
+            row: 3
+            col: 4
+            name: §r[信息] 鸣谢
+            lore:
+            - §r感谢中/英文灾厄Wiki、Terraria Wiki提供的信息
+            - §r感谢KuLou_D制作的长直模型
+            - §r感谢群友们的陪伴支持
         back:
             row: 5
             col: 4
@@ -327,6 +335,8 @@ bossKSLM:
             row: 0
             col: 4
             name: §r[信息] 史莱姆王
+            lore:
+            - §rBGM：
         summon:
             row: 1
             col: 1
@@ -2727,11 +2737,12 @@ bossYRN:
             - §r注意制作神明吞噬者后的大量武器，饰品和护甲以及更高级的治疗药水
             - §rBOSS战的主要难度来源于旋转的火球圈
             - §r在火球圈的垂直方向走位没有意义；需沿着火球圈的方向微调位置
-            - §r同时留意两轮火球以准备逃生路径
+            - §r建议同时留意两轮火球以准备逃生路径
             - §r小心不要碰到停留在原地的龙卷或离开边界获得龙焰DEBUFF
             - §r稍微留意BOSS冲刺的速度以判断本次冲刺的持续时间
             - §r可利用简单的阶段热身和熟悉旋转火球的性质
-            - §r最后阶段建议与BOSS保持较近的距离，以避免同时躲避火球和冲刺
+            - §r最后阶段建议与BOSS保持中等的距离以避免同时躲避火球和冲刺；多进行横向而非前后移动
+            - §r方舟类武器也可提供额外的容错
             - §r第二阶段BOSS在传送发射火球前保持下落
             - §r之后阶段BOSS在发射火球前保持后退
         back:
