--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -298,6 +298,8 @@ skins.297=297
 skins.298=298
 skins.299=299
 skins.300=300
+skins.301=301
+skins.302=302
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -386,7 +388,7 @@ name.84=\u8fdc\u53e4\u8f89\u5149
 name.85=\u8fdc\u53e4\u5669\u8fd0
 name.86=\u5e7b\u5f71\u9f99
 name.87=\u5e7b\u5f71\u9f99\u00a71
-name.88=\u661f\u5c18\u4e4b\u9f99\u00a71
+name.88=\u661f\u5c18\u4e4b\u9f99\u5934
 name.89=\u661f\u5c18\u4e4b\u9f99
 name.90=\u6cf0\u62c9\u60a0\u60a0\u7403
 name.91=\u514b\u82cf\u9c81\u4e4b\u773c\u60a0\u60a0\u7403
@@ -599,3 +601,5 @@ name.297=\u81f3\u5c0a\u707e\u5384
 name.298=\u81f3\u5c0a\u707e\u96be
 name.299=\u81f3\u5c0a\u707e\u7978
 name.300=\u5f11\u795e\u4f20\u9001\u95e8
+name.301=\u5c0f\u767d\u661f
+name.302=\u2588\u2588\u002d\u2588\u2588\u0020\u201c\u5609\u767b\u201d
