--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -415,6 +415,7 @@
         - "燃烧"
         - "中毒"
 幽灵:
+    soundKilled: entity.hit.ghost
     drop:
         - "铜币:1000:1500:1"
     buffInflict:
@@ -671,8 +672,8 @@
     buffImmute:
         - "中毒"
 地牢幽魂:
-    soundDamaged: entity.hit.pixie
-    soundKilled: entity.hit.crystal
+    soundDamaged: entity.hit.ghost
+    soundKilled: entity.hit.pixie
     drop:
         - "铜币:1000:1500:1"
         - "灵气:1:3:1"
@@ -683,8 +684,8 @@
         - "咒火"
         - "燃烧"
 幻魂:
-    soundDamaged: entity.hit.pixie
-    soundKilled: entity.hit.crystal
+    soundDamaged: entity.hit.ghost
+    soundKilled: entity.hit.pixie
     drop:
         - "铜币:2000:4000:1"
         - "灵质:1:3:1"
@@ -905,6 +906,7 @@
         - "神圣之火"
         - "夜魇"
 猪鲨公爵:
+    soundDamaged: entity.old_duke.old_duke_hurt
     buffImmute:
         - "中毒"
         - "剧毒"
@@ -1089,6 +1091,37 @@
         - "神圣之火"
         - "夜魇"
         - "弑神怒焰"
+噬魂幽花:
+    soundDamaged: entity.hit.ghost
+    buffInflict:
+        - "死亡低语|60|1"
+    buffImmute:
+        - "狱炎"
+        - "辐射"
+        - "带电"
+        - "破晓"
+        - "神圣之火"
+        - "夜魇"
+噬魂幽花克隆体:
+    soundDamaged: entity.hit.ghost
+    buffInflict:
+        - "死亡低语|60|1"
+    buffImmute:
+        - "狱炎"
+        - "辐射"
+        - "带电"
+        - "破晓"
+        - "神圣之火"
+        - "夜魇"
+硫海遗爵:
+    soundDamaged: entity.old_duke.old_duke_hurt
+    buffInflict:
+        - "辐射|160|1"
+    buffImmute:
+        - "中毒"
+        - "剧毒"
+        - "辐射"
+        - "硫磺海剧毒"
 装甲神明吞噬者头:
     soundDamaged: entity.hit.otherworldly
     buffInflict:
