underworld sky texture bugfix

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/sky/world0/sky19.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/sky/world0/sky19.properties
@@ -2,5 +2,5 @@ startFadeIn=0:00
 endFadeIn=0:00
 endFadeOut=23:59
 rotate=false
-biomes=savanna_rock savanna
+biomes=savannaplateau savanna
 transition=3
